# auto-daily-report

./: .gitignore  PRODUCT.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: release.yml
docs/: product-status.md  product-status.zh-CN.md  release.md
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/api/: tauriClient.ts
